--- a/css/layout/auth.css
+++ b/css/layout/auth.css
@@ -82,19 +82,23 @@
     background-color: var(--white);
 }
 
-.login-form {
+.login-form, .payment-form {
     padding: 0 80px;
 }
 
-.login-form .-form-group {
+.login-form .-form-group, .payment-form .-form-group {
     margin-top: 25px;
 }
 
-.login-form button {
+.login-form button, .payment-form button {
     margin-top: 25px;
     padding: 12px 15px;
     border-radius: 8px;
     font-size: 1.5rem;
+}
+
+.registerBox {
+    display: none;
 }
 
 .register {
