--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,31 @@
 ::-webkit-scrollbar-thumb:hover {
     background: var(--warning);
 }
+
+/* Sweet_Alert_2 */
+.swal2-icon {
+    font-size: 1.5rem;
+}
+
+.swal2-title {
+    font-size: 2rem !important;
+}
+
+.swal2-content, .swal2-html-container {
+    font-size: 1.4rem !important;
+    direction: rtl !important;
+    text-align: center !important;
+}
+
+.swal2-content * {
+    direction: rtl !important;
+    text-align: center !important;
+}
+
+.swal2-actions button {
+    font-size: 1.4rem !important;
+}
+
+.swal2-popup {
+    max-width: 100% !important;
+}
