--- a/view/adminPanel/admin/iranair-tehran-birjand.html
+++ b/view/adminPanel/admin/iranair-tehran-birjand.html
@@ -13,7 +13,7 @@
     <title>شرکت هواپیمایی ایران ایر | پنل مدیریت</title>
 </head>
 
-<body>
+<body onLoad="date()">
     <!-- Header -->
     <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
