--- a/view/adminPanel/admin/tickets.html
+++ b/view/adminPanel/admin/tickets.html
@@ -12,7 +12,7 @@
     <title>بلیط های خریداری شده | پنل مدیریت</title>
 </head>
 
-<body>
+<body onLoad="date();document.getElementById('m2').classList.add('active')">
     <!-- Header -->
     <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
