--- a/view/adminPanel/admin/timing.html
+++ b/view/adminPanel/admin/timing.html
@@ -13,7 +13,7 @@
     <title>زمانبندی پرواز ها | پنل مدیریت</title>
 </head>
 
-<body>
+<body onLoad="date();document.getElementById('m1').classList.add('active')">
     <!-- Header -->
     <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
