--- a/view/layout/header.html
+++ b/view/layout/header.html
@@ -7,4 +7,4 @@
         <li><a href="javascript:void(0)" class="-text-light">تماس با ما</a></li>
     </ul>
 </div>
-<a href="#" class="showModal -btn -btn-light header-auth">ورود به حساب</a>
+<a href="#" id="authModal" class="-btn -btn-light header-auth">ورود به حساب</a>
