--- a/view/adminPanel/admin/airplanes.html
+++ b/view/adminPanel/admin/airplanes.html
@@ -13,7 +13,7 @@
     <title>لیست هواپیما ها | پنل مدیریت</title>
 </head>
 
-<body>
+<body onLoad="date();document.getElementById('m3').classList.add('active')">
     <!-- Header -->
     <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
