--- a/view/adminPanel/admin/iranair.html
+++ b/view/adminPanel/admin/iranair.html
@@ -12,7 +12,7 @@
     <title>شرکت هواپیمایی ایران ایر | پنل مدیریت</title>
 </head>
 
-<body>
+<body onLoad="date()">
     <!-- Header -->
     <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
