--- a/view/adminPanel/user/tickets.html
+++ b/view/adminPanel/user/tickets.html
@@ -12,7 +12,7 @@
     <title>بلیط های خریداری شده | پنل کاربری</title>
 </head>
 
-<body>
+<body onLoad="date()">
     <!-- Header -->
     <header w3-include-html="/view/adminPanel/layout/header.html"></header>
     <div class="content">
