--- a/view/seat-selection.html
+++ b/view/seat-selection.html
@@ -44,8 +44,7 @@
                         </div>
                         <div class="info">
                             <p class="-w-100 -center price"><strong>9,850,000</strong> تومان</p>
-                            <a href="#" class="-w-100 -btn -btn-warning">انتخاب پرواز</a>
-                            <small class="-w-100 -text-danger -center">9 صندلی باقی مانده</small>
+                            <small class="-w-100 capacity-label -center">9 صندلی باقی مانده</small>
                         </div>
                     </div>
                     <div class="trip p-20">
