the color of the empty seats turned gray. "AdminPanel"

--- a/css/adminPanel/admin/trip.css
+++ b/css/adminPanel/admin/trip.css
@@ -55,7 +55,7 @@
     font-size: 0.98rem;
     width: 20px;
     height: 15px;
-    background-color: var(--success);
+    background-color: var(--secondary);
     display: inline-block;
     text-align: center;
     line-height: 15px;
