[UPDATE] fetch api

--- a/view/adminPanel/admin/airplanes.html
+++ b/view/adminPanel/admin/airplanes.html
@@ -27,54 +27,14 @@
                     <h3 class="-card-title">لیست هواپیما ها</h3>
                 </div>
 
-                <div class="-card-body airplanes">
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/EP.png" alt="آسمان"></div>
-                        <h3 class="-f-900 -center">آسمان</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/I3.png" alt="آتا"></div>
-                        <h3 class="-f-900 -center">آتا</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/IV.png" alt="کاسپین"></div>
-                        <h3 class="-f-900 -center">کاسپین</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/SA.png" alt="ساها"></div>
-                        <h3 class="-f-900 -center">ساها</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/SR.png" alt="سپهران"></div>
-                        <h3 class="-f-900 -center">سپهران</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/VR.png" alt="وارش"></div>
-                        <h3 class="-f-900 -center">وارش</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="#"></a>
-                        <div class="image"><img src="/img/airplanes/W5.png" alt="ماهان"></div>
-                        <h3 class="-f-900 -center">ماهان</h3>
-                    </div>
-                    <div class="airplane">
-                        <a href="http://127.0.0.1:5500/view/adminPanel/admin/iranair.html"></a>
-                        <div class="image"><img src="/img/airplanes/IR.png" alt="ایران ایر"></div>
-                        <h3 class="-f-900 -center">ایران ایر</h3>
-                    </div>
-                </div>
+                <div class="-card-body airplanes"></div>
             </div>
         </main>
     </div>
 
     <script src="/js/main.js"></script>
     <script src="/js/adminPanel/layout.js"></script>
+    <script src="/js/adminPanel/airplanes.js"></script>
 </body>
 
 </html>
