--- a/view/adminPanel/layout/asideUser.html
+++ b/view/adminPanel/layout/asideUser.html
@@ -11,5 +11,5 @@
 <hr>
 <ul>
     <li><a href="http://127.0.0.1:5500/view/adminPanel/user/tickets.html" class="active"><span><i class="fas fa-ticket-alt"></i></span>بلیط های من</a></li>
-    <li><a href="http://127.0.0.1:5500/view"><span><i class="fas fa-sign-out-alt"></i></span> خروج از حساب کاربری</a></li>
+    <li><a href="http://127.0.0.1:5500/view" class="logout"><span><i class="fas fa-sign-out-alt"></i></span> خروج از حساب کاربری</a></li>
 </ul>
