--- a/css/adminPanel/layout.css
+++ b/css/adminPanel/layout.css
@@ -128,6 +128,10 @@ header div.header-content {
     background-color: #f8f9fa52;
 }
 
+.sidebar a.logout:hover {
+    background-color: var(--danger);
+}
+
 .sidebar a.active {
     color: var(--dark);
     background-color: var(--light);
