--- a/view/adminPanel/layout/asideAdmin.html
+++ b/view/adminPanel/layout/asideAdmin.html
@@ -10,9 +10,10 @@
 </div>
 <hr>
 <ul>
+    <li><a id="m0" href="http://127.0.0.1:5500/view/adminPanel/admin/users.html"><span><i class="fas fa-users"></i></span>مدیریت کاربران</a></li>
     <li><a id="m1" href="http://127.0.0.1:5500/view/adminPanel/admin/timing.html"><span><i class="fas fa-history"></i></span>زمانبندی پرواز ها</a></li>
     <li><a id="m2" href="http://127.0.0.1:5500/view/adminPanel/admin/tickets.html"><span><i class="fas fa-ticket-alt"></i></span>بلیط های خریداری شده</a></li>
     <li><a id="m3" href="http://127.0.0.1:5500/view/adminPanel/admin/airplanes.html"><span><i class="fas fa-plane"></i></span>لیست هواپیما ها</a></li>
-    <li><a href="http://127.0.0.1:5500/view"><span><i class="fas fa-sign-out-alt"></i></span> خروج از حساب کاربری</a>
+    <li><a href="http://127.0.0.1:5500/view" class="logout"><span><i class="fas fa-sign-out-alt"></i></span> خروج از حساب کاربری</a>
     </li>
 </ul>
