--- a/view/layout/auth.html
+++ b/view/layout/auth.html
@@ -12,14 +12,14 @@
                 <div class="-form-group -w-100">
                     <label for="mobile" class="-input -w-100">
                         <span class="-input-title">شماره موبایل</span>
-                        <input autocomplete="off" type="text" name="mobile" id="mobile"
+                        <input autocomplete="off" type="text" name="phone" id="phoneLogin"
                             placeholder="شماره موبایل خود را وارد کنید.">
                     </label>
                 </div>
                 <div class="-form-group -w-100">
                     <label for="password" class="-input -w-100">
                         <span class="-input-title">کلمه عبور</span>
-                        <input autocomplete="off" type="password" name="password" id="password"
+                        <input autocomplete="off" type="password" name="password" id="passwordLogin"
                             placeholder="کلمه عبور خود را وارد کنید.">
                     </label>
                 </div>
